Fix letter spacing in legend

--- a/res/css/views/messages/_MPollBody.pcss
+++ b/res/css/views/messages/_MPollBody.pcss
@@ -19,6 +19,7 @@ Please see LICENSE files in the repository root for full details.
         line-height: $font-24px;
         margin-top: 0;
         margin-bottom: 8px;
+        letter-spacing: var(--cpd-font-letter-spacing-heading-lg);
 
         .mx_MPollBody_edited {
             color: $roomtopic-color;
